test/files/pos/constant-warning.scala
object Test {
  val fails = 1 + 2 / (3 - 2 - 1)
}
